# CaT-Preprocessor

./: .DOMINO-SSA-PROCEDURE-ORIGINAL.md.swp  DOMINO-SSA-PROCEDURE-ORIGINAL.md  Makefile.am  README.md  TODO  algebraic_simplifier.cc  algebraic_simplifier.h  array_replacer.cc  array_replacer.h  array_validator.h  ast_visitor.cc  ast_visitor.h  binary_operators.h  branch_var_creator.cc  branch_var_creator.h  chipmunk_deadcode_generator.cc  chipmunk_deadcode_generator.h  clang_utility_functions.cc  clang_utility_functions.h  comp_uid.cc  comp_uid.h  compiler_pass.h  configure.ac  configure~  const_prop.cc  const_prop.h  context.h  cse.cc  csi.cc  dce.cc  dde.cc  dde.h  dep_graph.h  desugar_compound_assignment.cc  domino.cc  domino_orig.cc  elim_identical_lhs_rhs.cc  elim_identical_lhs_rhs.h  elim_ternary.cc  elim_ternary.h  (+39 more)
benchmarks/blue_decrease/: blue_decrease.in_dag  blue_decrease.in_dep  blue_decrease1.in_dag  blue_decrease1.in_dep
benchmarks/learn_filter/: learn_filter.in_dag  learn_filter.in_dep
benchmarks/marple_new_flow/: marple_new_flow.in_dag  marple_new_flow.in_dep
benchmarks/marple_tcp_nmo/: marple_tcp_nmo.in_dag  marple_tcp_nmo.in_dep
benchmarks/rcp/: rcp.in_dag  rcp.in_dep
benchmarks/stateful_fw/: stateful_fw.in_dag  stateful_fw.in_dep
domino_test_programs/: blue_decrease.in  blue_increase.in  conga.c  conga.in  flowlets.c  flowlets.in  marple_new_flow.in  marple_tcp_nmo.in  sampling.in  tmpsGOxqy.c
mutation-tests/: flowlets-1.c
real_tests/: blue_decrease_2.c  conga_6.c  dns_ttl_change_5.c  learn_filter_3.c  marple_tcp_nmo_3.c  sampling_7.c  stateful_fw_6.c
rjf_tests/: add.c  add_bit.c  add_branch.c  add_branch_array_state.c  add_branch_multi_state.c  add_branch_multi_state_nested.c  add_branch_state.c  blue_decrease_canonical_2.c  comp_asgn.c  compiled_rcp_expr.c  dce_example.c  flowlets.c  ite.c  ite_super.c  left_associative_and.c  nested_negations.c  rcp_expr.c  stateful_fw.c  test-domino-out.c  tmpJ76rnb.c  tmpWwBiAV.c
tmp_tests/: tmp_test.c  tmp_test11.c  tmp_test12.c  tmp_test13.c  tmp_test14.c  tmp_test15.c  tmp_test16.c  tmp_test17.c  tmp_test18.c  tmp_test19.c  tmp_test2.c  tmp_test3.c  tmp_test4.c  tmp_test5.c  tmp_test6.c  tmp_test7.c  tmp_test8.c  tmp_test9.c
